<resources>
    <string name="app_name">app_GPOI_istruzioni</string>
    <string name="giocoIndicativo">Indicativi</string>
    <string name="giocoSinomini">Sinomini</string>
    <string name="giocoArticoli">Articoli</string>
    <string name="giocoPreposizioni">Preposizioni</string>
    <string name="giocoNomi">Nomi</string>
    <string name="giocoAggettivi">Aggettivi</string>
    <string name="IstruzioniGiocoArticoli">Nella parte superiore dello schermo sono presenti due scatole, su cui c\'è scritto "Articoli determinativi" e "Articoli indeterminativi". Nella parte inferiore ci sono dei mattoncini, al cui interno ci sono degli articoli, determinativi e indeterminativi. Il tuo compito è di inserire i mattoncini all\'interno della scatola corretta. Quando i mattoncini saranno finiti, apparirà un messaggio che ti dirà se hai vinto o hai perso, mostrandoti anche gli errori commessi.Più vai avanti con i livelli, più i mattoncini da inserire aumentano.</string>
    <string name="IstruzioniGiocoPreposizioni">Nella tabella, che trovi al centro dello schermo, le colonne corrispondono agli articoli determinativi (il, lo, la, i, gli, le) mentre, le righe, corrispondo alle preposizioni semplici (di, a, da, in, con, su, per, tra, fra). Usando la frase che trovi nella parte superiore dello schermo, inserisci la preposizione corretta. Per inserire una preposizione bisogna cliccare la cella che corrisponde alla sua formazione (ad esempio, per inserire l’articolo “del” premi la cella “il-di”). Con qualsiasi livello di difficoltà, il tuo compito è quello di inserire correttamente tre preposizione e, più si va avanti di livello, più diminuiscono i tentativi.</string>
    <string name="IstruzioniGiocoNomi">A schermo verrà presentato un cruciverba contenente parole di diverso genere. *
                                        Il giocatore può scegliere un livello di difficoltà tra Facile , Medio e Difficile :
                                        Facile : Il giocatore ha a disposizione come aiuto la lettera iniziale e finale , più 1 o 2 lettere casuali della parola.
                                        Medio : Il giocatore ha a disposizione solo la lettera iniziale.
                                        Difficile : Il giocatore non ha a disposizione nessuna lettera.

                                        * I possibili generi di parole che possono essere visualizzate sono :
                                        Nomi:
                                        - Nomi comuni
                                        - Nomi propri
                                        - Nomi concreti
                                        - Nomi astratti
                                        - Nomi individuali
                                        - Nomi Collettivi
                                        - Nomi numerabili
                                        - Nomi non numerabili</string>
    <string name="IstruzioniGiocoAggettivo">Immagine oscurata :
                                            Il giocatore ha a disposizione un immagine che viene suddivisa in un numero casuale di parti, numero scelto in base al livello di difficoltà disponibile tra Facile , Medio e Difficile.
                                            Sotto l\'immagine verrà mostrata una frase contente un aggettivo (segnato in grassetto) , il giocatore dovrà scegliere la giusta categoria di aggettivi tra le opzioni suggerite sotto la frase.

                                            Facile : immagine suddivisa in X parti, Y opzioni dispobili
                                            Medio : immagine suddivisa in X parti
                                            Difficile : immagine suddivisa in X parti

                                            Ogni volta che il giocatore selezionerà il bottone giusto , una porzione di immagine verrà resa visibile.
                                            Il gioco termina quando tutta l'immagine sarà visibile.
                                            In caso di errore al primo tentativo , l'immagine rimarrà oscurata e verrà mostrata una nuova frase con nuove opzioni.</string>
    <string name="IstruzioniGiocoIndicativo">Scrivere alcune frasi con uno spazio nel quale bisogna inserire un verbo indicativo. Nella parte inferiore dello schermo inseriamo dei verbi di tutti i tipi e il ragazzo deve capire qual e il verbo indicativo e saperlo inserire nello spazio corretto. Si puo anche mettere un numero massimo di tentativi.</string>
</resources>