<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="361dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="680dp" />

    <Button
        android:id="@+id/btnGiocoIndicativo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/giocoIndicativo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/btnGiocoSinomini"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/giocoSinomini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiocoIndicativo" />

    <Button
        android:id="@+id/btnGiocoArticoli"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/giocoArticoli"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiocoSinomini" />

    <Button
        android:id="@+id/btnGiocoPreposizioni"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/giocoPreposizioni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiocoArticoli" />

    <Button
        android:id="@+id/btnGiocoNomi"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:text="@string/giocoNomi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiocoPreposizioni" />

    <Button
        android:id="@+id/btnGiocoAggettivo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/giocoAggettivi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGiocoNomi" />
</androidx.constraintlayout.widget.ConstraintLayout>